Merge in fixes to allow tests to run cleanly from the gradle wrapper