@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.1.0'
+    }
+}
+
 plugins {
     id 'org.ajoberstar.grgit' version '2.1.0'
     id 'com.zyxist.chainsaw' version '0.1.3'
@@ -7,12 +16,17 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 javaModule.name = 'gov.gsa.pivconformance'
 
 repositories {
     jcenter()
     maven { url 'https://repository.apache.org/snapshots' }
+}
+
+configurations {
+    junitXmlToHtml
 }
 
 dependencies {
@@ -32,10 +46,12 @@ dependencies {
     testCompile 'org.slf4j:slf4j-api:1.8+'
     testCompile 'ch.qos.logback:logback-classic:1.3+'
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.1.0'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
     testRuntime 'org.junit.jupiter:junit-jupiter-params:5.1.0'
 
     shadow 'org.bouncycastle:bcprov-jdk15on:1.59'
+    junitXmlToHtml 'org.apache.ant:ant-junit:1.9.7'
 
 }
 
@@ -62,16 +78,45 @@ run {
 }
 
 compileTestJava {
-    //inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-            //'--module-path', classpath.asPath, 
-            '--add-modules', 'junit',  
-            '--add-reads', "gov.gsa.pivconformancetest=junit", 
-            '--patch-module', "gov.gsa.pivconformancetest=" + files(sourceSets.test.java.srcDirs).asPath, 
-        ]
-        classpath = files()
+    javaModule.name = 'gov.gsa.pivconformancetest'
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
     }
+}
+
+//tasks.withType(Test) {
+ //   scanForTestClasses = false
+  //  include "**/*Tests.class"
+//}
+junitPlatform {
+    //logManager 'org.apache.logging.log4j.jul.LogManager'
+}
+
+
+task generateHtmlTestReports << {
+    def reportsDir = new File(buildDir, 'test-reports')
+    reportsDir.mkdirs()
+
+    ant.taskdef(
+        name: 'junitReport',
+        classname: 'org.apache.tools.ant.taskdefs.optional.junit.XMLResultAggregator',
+        classpath: configurations.junitXmlToHtml.asPath
+    )
+
+    ant.junitReport(todir: "$buildDir/test-results/junit-platform", tofile: "aggregated-test-results.xml") {
+        fileset(dir: "$buildDir/test-results/junit-platform")
+        report(format: 'frames', todir: reportsDir)
+    }
+}
+
+afterEvaluate {
+    def junitPlatformTestTask = tasks.getByName('junitPlatformTest')
+    generateHtmlTestReports.dependsOn(junitPlatformTestTask)
+    check.dependsOn(generateHtmlTestReports)
 }
 
 compileJava.doFirst {
